<resources>
    <string name="app_name">CreatureMon</string>

    <string name="clear_all_creatures">Clear All Creatures</string>
    <string name="add_creature">Add Creature</string>

    <string name="smart">smart</string>
    <string name="dumb">dumb</string>
    <string name="strong">strong</string>
    <string name="weak">weak</string>
    <string name="tough">tough</string>
    <string name="regular">regular</string>

    <string name="home">home</string>
    <string name="avatar">Avatar</string>
    <string name="tap_to_set_avatar">Tap to set avatar</string>
    <string name="intelligence">Intelligence:</string>
    <string name="strength">Strength:</string>
    <string name="endurance">Endurance:</string>
    <string name="hit_points">Hit Points:</string>
    <string name="name">Name:</string>
    <string name="creature_name">Creature name</string>
    <string name="hit_points_upper">HIT POINTS</string>
    <string name="save">SAVE</string>
    <string name="generate">generate</string>
    <string name="error_saving_creature">Please complete all fields.</string>
    <string name="creature_saved">Creature saved!</string>
    <string name="creatures">Creatures</string>
    <string name="new_creature">New Creature</string>

    <string name="empty_creature_name">*Name field can\'t be empty</string>
    <string name="empty_creature_avatar">*Please select a creature avatar</string>
    <string name="et_name_hint">Enter at least 3 characters</string>
</resources>