<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addCreatureViewModel"
            type="com.canonal.creaturemon.ui.viewModel.AddCreatureViewModel" />

        <variable
            name="generateButtonViewState"
            type="com.canonal.creaturemon.ui.creature.addCreatureViewState.GenerateButtonViewState" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.creature.CreatureActivity">

        <TextView
            android:id="@+id/tvTapAvatarLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_set_avatar"
            android:textSize="24sp"
            android:fontFamily="@font/intro_regular"
            app:layout_constraintBottom_toBottomOf="@+id/ivAvatar"
            app:layout_constraintEnd_toEndOf="@+id/ivAvatar"
            app:layout_constraintStart_toStartOf="@+id/ivAvatar"
            app:layout_constraintTop_toTopOf="@+id/ivAvatar"
            tools:text="@string/tap_to_set_avatar" />

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNameLabel"
            android:text="@string/name"
            style="@style/attributeTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAvatar" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/intro_regular"
            android:autofillHints="name"
            android:hint="@string/et_name_hint"
            android:inputType="text"
            android:maxLength="15"
            android:text="@={addCreatureViewModel.creatureName}"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvNameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvIntelligenceLabel" />

        <TextView
            android:id="@+id/tvIntelligenceLabel"
            style="@style/attributeTextView"
            android:text="@string/intelligence"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameLabel" />

        <Spinner
            android:id="@+id/spinnerIntelligence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvIntelligenceLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvIntelligenceLabel" />

        <TextView
            android:id="@+id/tvStrengthLabel"
            style="@style/attributeTextView"
            android:text="@string/strength"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvIntelligenceLabel" />

        <Spinner
            android:id="@+id/spinnerStrength"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvStrengthLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvIntelligenceLabel" />

        <TextView
            android:id="@+id/tvEnduranceLabel"
            style="@style/attributeTextView"
            android:text="@string/endurance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStrengthLabel" />

        <Spinner
            android:id="@+id/spinnerEndurance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvEnduranceLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvIntelligenceLabel" />

        <TextView
            android:id="@+id/tvCreatureAvatarError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/attributeTextView"
            android:text="@string/empty_creature_avatar"
            android:textColor="@color/red"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/btnGenerate"
            app:layout_constraintTop_toBottomOf="@+id/tvEnduranceLabel" />

        <Button
            android:id="@+id/btnGenerate"
            generateButtonVisibility="@{generateButtonViewState.generateButtonVisibility}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/intro_regular"
            android:text="@string/generate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCreatureAvatarError" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>